<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:background="@color/view_background_color"
        android:layout_width="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor">

            <ImageView
                android:contentDescription="@string/backicon"
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/back"
                android:textColor="#DD2C00"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/playlistText"
                android:textColor="@color/btn_try_color"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            app:contentScrim="@color/view_background_color"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="#F6F6F6"
            android:layout_gravity="bottom"
            app:toolbarId="@+id/toolbar">

            <TextView
                android:id="@+id/text_description"
                android:text="@string/description_text"
                android:textSize="24sp"
                android:fontFamily="@font/fjalla_one"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="92dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="15sp"
                android:textColor="@color/snippet_description_color"
                android:id="@+id/snippet_description"
                android:text="@string/snippet_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/detailed_placeholder" />

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/play_btn"
        android:src="@drawable/ic_play2"
        tools:ignore="RedundantDescriptionCheck" />





</androidx.coordinatorlayout.widget.CoordinatorLayout>