<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/preView"
        android:background="@color/shape_color"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="120dp"
            android:layout_height="24dp"
            android:background="#80000000"
            app:layout_constraintStart_toStartOf="@id/preView"
            app:layout_constraintBottom_toBottomOf="@id/preView"/>

    <TextView
        android:id="@+id/playlistText"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/playlist"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/preView"
        app:layout_constraintStart_toStartOf="@id/preView" />


    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fjalla_one"
        android:layout_marginStart="8dp"
        android:scrollHorizontally="false"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="25dp"
        android:text="@string/description_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/preView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_video_series"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/video_series_text"
        android:textColor="@color/video_series_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/playlistText"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

</androidx.constraintlayout.widget.ConstraintLayout>